# atre-unofficial-proton-drive-client

./: .gitignore  AGENTS.md  Cargo.toml  DIARY.md  Get-RecentDevices.ps1  NOTICE  README.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: general.md
.opencode/plans/: AGENTS.md
crates/proton-core/: Cargo.toml
crates/proton-core/src/: error.rs  i18n.rs  keyring.rs  lib.rs  throttle.rs  transfer.rs
crates/proton-core/src/api/: client.rs  drive_types.rs  types.rs
crates/proton-core/src/auth/: mod.rs  password.rs  srp.rs
crates/proton-core/src/crypto/: mod.rs
crates/proton-core/src/db/: mod.rs
crates/proton-core/src/drive/: keyring.rs  mod.rs
crates/proton-core/src/ipc/: mod.rs
crates/proton-core/src/local/: mod.rs
crates/proton-core/src/sync/: mod.rs
crates/proton-core/tests/: auth_integration.rs  e2e_mock.rs
crates/proton-drive/: Cargo.toml
crates/proton-drive/src/: main.rs
crates/proton-gui/: Cargo.toml
crates/proton-gui/src/: main.rs  tray.rs
crates/protond/: Cargo.toml
crates/protond/src/: handler.rs  main.rs  watcher.rs
crates/protond/tests/: integration.rs
packaging/: build-appimage.sh  com.proton.drive.metainfo.xml  com.proton.drive.yml  proton-drive.1  proton-drive.desktop  protond.1  protond.service
packaging/debian/: changelog  control  copyright  proton-drive.manpages  rules
