[workspace]
members = [
    "crates/proton-core",
    "crates/protond",
    "crates/proton-drive",
    "crates/proton-gui",
]
resolver = "2"

[workspace.dependencies]
tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
anyhow     = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
