[workspace]
members = [
    "crates/proton-core",
    "crates/protond",
    "crates/proton-drive",
    "crates/proton-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["agusti-grau"]
edition = "2021"
license = "MIT"
repository = "https://github.com/agusti-grau/proton-drive-client"
homepage = "https://github.com/agusti-grau/proton-drive-client"
rust-version = "1.75"

[workspace.dependencies]
tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
anyhow     = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify   = "6"
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 2
