[package]
name    = "proton-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }

reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2     = "0.10"
bcrypt   = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand     = "0.8"
base64   = "0.22"
keyring  = { version = "3", features = ["async-secret-service", "tokio", "crypto-rust"] }
zeroize  = { version = "1", features = ["derive"] }
pgp      = { version = "0.14", default-features = false }
rusqlite = { workspace = true }
aes      = "0.8"
cbc      = "0.1"
smallvec = "1"
hex      = "0.4"
hmac     = "0.12"
tracing  = { workspace = true }
futures  = "0.3"
libc     = "0.2"
chrono   = "0.4"

[dev-dependencies]
wiremock = "0.6"
