[package]
name    = "proton-drive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "proton-drive"
path = "src/main.rs"

[dependencies]
proton-core = { path = "../proton-core" }
tokio       = { workspace = true }
anyhow      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
rpassword   = "7"
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
