[package]
name    = "proton-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proton-gui"
path = "src/main.rs"

[dependencies]
proton-core = { path = "../proton-core" }
iced    = { version = "0.12", features = ["tokio"] }
tokio   = { workspace = true }
serde_json = { workspace = true }

[profile.release]
opt-level = 2
