[package]
name    = "proton-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "proton-gui"
path = "src/main.rs"

[features]
default = []
tray    = ["tray-icon", "crossbeam-channel"]

[dependencies]
proton-core = { path = "../proton-core" }
iced    = { version = "0.12", features = ["tokio"] }
tokio   = { workspace = true }
serde_json = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
notify-rust = "4"
rfd = "0.14"

# System tray icon (optional — requires GTK system libraries)
tray-icon = { version = "0.24", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

