[package]
name    = "protond"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protond"
path = "src/main.rs"

[dependencies]
proton-core  = { path = "../proton-core" }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde_json   = { workspace = true }
notify       = { workspace = true }
tokio-util   = "0.7"
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
chrono       = "0.4"
hex          = "0.4"
