[package]
name    = "protond"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "protond"
path = "src/main.rs"

[dependencies]
proton-core  = { path = "../proton-core" }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde_json   = { workspace = true }
notify       = { workspace = true }
tokio-util   = "0.7"
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
chrono       = "0.4"
hex          = "0.4"
libc         = "0.2"
zeroize      = "1"
